# Versa3dPython

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  Versa3dLib.cp36-win_amd64.pyd  Versa3dMainWindow.ui  app.py  environment.yml  google.txt.in  main.py  main.spec  mainWindow.ui  pyproject.toml  setup.cfg  setup.py  ui_MainWindow.py  versa3d.py  versa3d.spec  vtk.txt.in
Icons/: res.qrc
config/: PrintConfig.ini  PrintHeadConfig.ini  PrinterConfig.ini  versa3dConfig.ini
configs/: default_config.json  default_preset.json  default_printer.json  default_printhead.json
designer_files/: Versa3dMainWindow.ui
designer_files/icon/: README.md  versa3d_icon.py  versa3d_icon.qrc
docs/source/: conf.py  index.rst
docs/source/api/: api.rst
docs/source/usage/: install.rst
lib/: CMakeLists.txt  versa3dConfig.py
lib/include/: PybindVTKTypeCaster.h  bmpwriter.h  converter.h  skeletonizer.h
lib/src/: bmpwriter.cc  bmpwriter_wrap.cc  python_wrapper.cc  skeletonizer.cpp  test.cc
src/: Versa3dMainWindow.ui  gcode.py  main.py  mainWindow.py  main_window.py  mouse_interaction.py  print_platter.py  printer_settings.py  slicing.py  versa3d_command.py  versa3d_settings.py
src/GUI/: MouseInteractorHighLightActor.py  Versa3dMainWindow.ui  command.py  res_rc.py  ui_Versa3dMainWindow.py
src/lib/: bmpwrite.py  command.py  gcode.py  polyskel.py  skeleton.py  slicing.py  straightskeleton.py  versa3dConfig.py
src/lib/gcode_template/: printHeadCluster.xml
src/uiPythonFile/: ui_Versa3dMainWindow.py
src/versa3d_settings/: __init__.py  __options__.py  __settings__.py
test/: CMakeLists.txt  debugHelper.py  t01_config.py  test_01_config.py  test_02_slicing.py  test_03_gcode.py  test_04_skeleton.py  test_bmpwriter.cc  test_dithering.cpp  test_gcode.py  test_platter.py  test_settings.py  test_slicing.py  test_voxelization.cpp  util.py
test/test_file/: 3DBenchySmall.vti  test_gcode.py
uiPythonFile/: ui_Versa3dMainWindow.py
versa3d/: controller.py  gcode.py  main_window.py  mouse_interaction.py  movement_widget.py  print_platter.py  scene.py  settings_window.py  slicing.py  tool_path_planner.py  util.py  versa3d_command.py
versa3d/settings/: __init__.py  __options__.py  __settings__.py  versa3d_entry.py  versa3d_settings.py
versa3d/versalib/: __init__.py
versalib/: CMakeLists.txt  VoxelizerFilter.cxx  __init__.py  vtk.module
versalib/include/: VoxDithering.h  VoxShelling.h  VoxelizerFilter.h
versalib/src/: VersaLib_wrapper.cc  VoxDithering.cc  VoxShelling.cc  VoxelizerFilter.cc
versalibpython/: CMakeLists.txt
versalibpython/src/: VersaLib_wrapper.cc
wrapping/: CMakeLists.txt
wrapping/include/: PybindVTKTypeCaster.h
wrapping/src/: VersaLibWrapper.cc
wrapping/versalib/: __init__.py
